--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=backend
+
 # PostgreSQL ?? ??
 spring.datasource.url=jdbc:postgresql://localhost:5432/cloudsecurity
 spring.datasource.username=postgres
@@ -9,3 +10,9 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Prometheus
+management.endpoints.web.exposure.include=prometheus,health,info
+
+# ??
+logging.file.name=./logs/your-app.log
