chore: 로그 관리 기능 ec2에서 동작하도록 설정

--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus.yml:/etc/prometheus.yml
     restart: unless-stopped
     command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--config.file=/etc/prometheus.yml'
 
   loki:
     image: grafana/loki:latest
@@ -25,9 +25,10 @@ services:
   promtail:
     image: grafana/promtail:latest
     container_name: promtail
-      - ./promtail/promtail-config.yml:/etc/promtail/config.yml
+    volumes:
+      - ./promtail-config.yml:/etc/promtail-config.yml
       - ../backend/logs:/app/logs
-    command: -config.file=/etc/promtail/config.yml
+    command: -config.file=/etc/promtail-config.yml
     restart: unless-stopped
 
   grafana:
