--- a/monitoring/loki-config.yml
+++ b/monitoring/loki-config.yml
@@ -3,6 +3,9 @@ auth_enabled: false
 server:
   http_listen_port: 3100
 
+common:
+  path_prefix: /tmp/loki
+
 ingester:
   lifecycler:
     ring:
@@ -12,7 +15,6 @@ ingester:
   chunk_idle_period: 5m
   max_chunk_age: 1h
   chunk_target_size: 1048576
-  max_transfer_retries: 0
 
 schema_config:
   configs:
@@ -28,11 +30,13 @@ storage_config:
   boltdb_shipper:
     active_index_directory: /tmp/loki/index
     cache_location: /tmp/loki/boltdb-cache
-    shared_store: filesystem
   filesystem:
     directory: /tmp/loki/chunks
 
 limits_config:
-  enforce_metric_name: false
+  allow_structured_metadata: false
   reject_old_samples: true
   reject_old_samples_max_age: 168h
+
+compactor:
+  working_directory: /tmp/loki/compactor
