--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     container_name: promtail
     volumes:
       - ./promtail-config.yml:/etc/promtail-config.yml
-      - ../backend/logs:/app/logs
+      - ./backend/logs:/app/logs
     command: -config.file=/etc/promtail-config.yml
     restart: unless-stopped
 
@@ -44,6 +44,15 @@ services:
       - loki
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
+    restart: unless-stopped
+
+  spring-app:
+    image: spring-app:latest
+    container_name: spring-app
+    ports:
+      - "8080:8080"
+    depends_on:
+      - prometheus
     restart: unless-stopped
 
 volumes:
