--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -5,7 +5,7 @@ scrape_configs:
   - job_name: 'spring-app'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['host.docker.internal:8080']  # 도커에서 외부 호스트 접근시
+      - targets: ['spring-app:8080']
 
   - job_name: 'prometheus'
     static_configs:
