fix: spring app 식별 불가 오류

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.jpa.properties.hibernate.format_sql=true
 management.endpoints.web.exposure.include=prometheus,health,info
 
 # ??
-logging.file.name=./logs/your-app.log
+logging.file.name=./logs/spring.log
