--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,8 +11,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# thymeleaf
+spring.thymeleaf.cache=false
+
 # Prometheus
 management.endpoints.web.exposure.include=prometheus,health,info
 
 # ??
 logging.file.name=./logs/spring.log
+
