--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -78,6 +78,7 @@ services:
 
   webhook:
     build: ./webhook
+    container_name: webhook
     ports:
       - '5001:5001'
     restart: unless-stopped
